fix: Small CSS fix to the row size on mobile

--- a/src/drive/styles/table.styl
+++ b/src/drive/styles/table.styl
@@ -176,7 +176,7 @@ mime-types('fil-file-', '../assets/icons/')
 
 .fil-file-path
 .fil-file-infos
-    flex 0 0 1.2rem
+    flex 0 0 1rem
     color coolGrey
     font-size .75rem
     position relative
